deployment-quiz-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: quiz
  name: quiz
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
      - image: cpruvost/cn-quiz-service:1.0.3-SNAPSHOT
        imagePullPolicy: Always
        name: cn-quiz-service
        readinessProbe:
          httpGet:
            port: 8000
            path: /actuator/health/readiness
        livenessProbe:
          httpGet:
            port: 8000
            path: /actuator/health/liveness
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quiz
  name: quiz
  namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: quiz
  sessionAffinity: None
  type: LoadBalancer
